Fixed Collapse Icon

--- a/GinsengFlask/GinsengFlask/static/css/style.css
+++ b/GinsengFlask/GinsengFlask/static/css/style.css
@@ -63,5 +63,6 @@
   z-index: 0;
 }
  .z-ind{
+ 	position: relative;
  	z-index: 999;
  }
